--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "ionic",
+  "name": "ionic-framework",
   "version": "0.9.05",
   "preferGlobal": true,
   "description": "A tool for creating and building Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
   "main": "ionic.js",
+  "keywords": [
+    "ionic",
+    "ionic framework",
+    "mobile",
+    "html5",
+    "cordova",
+    "phonegap"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/driftyco/ionic-cli.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
