Moved ionic-framework npm to ionic, thanks @jaredhanson

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-framework",
+  "name": "ionic",
   "version": "0.9.06",
   "preferGlobal": true,
   "description": "A tool for creating and building Ionic Framework mobile apps.",
