--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   "dependencies": {
     "adm-zip": "0.4.3",
     "cordova": "~3.2.0",    
+    "form-data": "~0.1.0",
     "ncp": "0.4.2",
     "optimist": "0.6.0",
     "prompt": "0.2.12",
     "request": "2.27.0",
-    "shelljs": "0.2.6",
     "unzip": "0.1.9"
   }
 }
