--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "0.9.16",
+  "version": "1.0.0-beta",
   "preferGlobal": true,
   "description": "A tool for creating and building Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -19,14 +19,10 @@
     "type": "git",
     "url": "https://github.com/driftyco/ionic-cli.git"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Max Lynch <max@drifty.com> and Peter Collins <peter@drifty.com>",
   "license": "MIT",
   "dependencies": {
     "archiver": "0.5.1",
-    "cordova": "~3.2.0",
     "event-stream": "3.0.x",
     "form-data": "~0.1.0",
     "ncp": "0.4.2",
