Removed dep on gulp and bower

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "request": "2.27.0",
     "shelljs": "0.2.6",
     "unzip": "0.1.9",
-    "q": "^1.0.1",
-    "colors": "^0.6.2"
+    "colors": "^0.6.2",
+    "q": "^1.0.1"
   }
 }
