--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -53,7 +53,8 @@
     "request": "2.27.0",
     "shelljs": "0.2.6",
     "tiny-lr-fork": "0.0.5",
+    "unzip": "0.1.9",
     "vinyl-fs": "^0.1.4",
-    "unzip": "0.1.9"
+    "xml2js": "^0.4.4"
   }
 }
