--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "keywords": [
     "ionic",
     "ionic framework",
+    "ionicframework",
     "mobile",
-    "html5",
+    "app",
+    "hybrid",
     "cordova",
     "phonegap"
   ],
