--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.2.8",
+  "version": "1.2.8-beta2",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -48,7 +48,7 @@
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
     "ncp": "0.4.2",
-    "npm": "^1.4.6",
+    "npm": "2.1.3",
     "open": "0.0.5",
     "optimist": "0.6.0",
     "prompt": "0.2.12",
