--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "optimist": "0.6.0",
     "prompt": "0.2.12",
     "progress": "1.1.7",
+    "proxy-middleware": "^0.7.0",
     "q": "1.0.1",
     "request": "2.27.0",
     "serve-static": "1.6.1",
