--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "tiny-lr-fork": "0.0.5",
     "unzip": "0.1.9",
     "vinyl-fs": "0.3.7",
-    "xml2js": "0.4.4"
+    "xml2js": "0.4.4",
+    "underscore": "~1.7.0"
   }
 }
