--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.2.12",
+  "version": "1.2.13",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -52,7 +52,7 @@
     "event-stream": "3.0.x",
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
-    "gulp": "~3.8.8",
+    "gulp": "3.8.8",
     "ncp": "0.4.2",
     "npm": "2.1.3",
     "open": "0.0.5",
