--- a/package.json
+++ b/package.json
@@ -47,27 +47,28 @@
     "archiver": "0.5.1",
     "colors": "0.6.2",
     "connect": "3.1.1",
-    "cross-spawn": "0.2.3",
     "connect-livereload": "0.4.0",
+    "cross-spawn": "0.2.3",
     "event-stream": "3.0.x",
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
     "ncp": "0.4.2",
     "npm": "2.1.3",
+    "opbeat": "^1.0.7",
     "open": "0.0.5",
     "optimist": "0.6.0",
-    "prompt": "0.2.12",
     "progress": "1.1.7",
+    "prompt": "0.2.12",
     "proxy-middleware": "^0.7.0",
     "q": "1.0.1",
     "request": "2.27.0",
     "serve-static": "1.7.1",
     "shelljs": "0.2.6",
     "tiny-lr-fork": "0.0.5",
+    "underscore": "~1.7.0",
     "unzip": "0.1.9",
     "vinyl-fs": "0.3.7",
-    "xml2js": "0.4.4",
-    "underscore": "~1.7.0"
+    "xml2js": "0.4.4"
   }
 }
