--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.2.13",
+  "version": "1.2.14",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -47,8 +47,9 @@
     "archiver": "0.5.1",
     "colors": "0.6.2",
     "connect": "3.1.1",
-    "cross-spawn": "0.2.3",
     "connect-livereload": "0.4.0",
+    "crc": "3.2.1",
+    "cross-spawn": "0.2.3",
     "event-stream": "3.0.x",
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
@@ -61,7 +62,7 @@
     "progress": "1.1.7",
     "proxy-middleware": "^0.7.0",
     "q": "1.0.1",
-    "request": "2.27.0",
+    "request": "2.51.0",
     "serve-static": "1.7.1",
     "shelljs": "0.2.6",
     "tiny-lr-fork": "0.0.5",
