--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "gulp": "3.8.8",
     "ncp": "0.4.2",
     "npm": "2.1.3",
-    "opbeat": "^1.0.7",
+    "opbeat-ionic": "^1.1.3",
     "open": "https://registry.npmjs.org/open/-/open-0.0.5.tgz",
     "optimist": "0.6.0",
     "progress": "1.1.7",
