--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.3.11",
+  "version": "1.3.12",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -45,6 +45,7 @@
   "license": "MIT",
   "dependencies": {
     "archiver": "0.5.1",
+    "async": "^0.9.0",
     "colors": "0.6.2",
     "connect": "3.1.1",
     "connect-livereload": "0.5.2",
@@ -67,7 +68,7 @@
     "semver": "^4.2.0",
     "serve-static": "1.7.1",
     "shelljs": "0.2.6",
-    "tiny-lr-fork": "0.0.5",
+    "tiny-lr": "^0.1.5",
     "underscore": "~1.7.0",
     "unzip": "0.1.9",
     "vinyl-fs": "0.3.7",
