--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "semver": "^4.2.0",
     "serve-static": "1.7.1",
     "shelljs": "0.2.6",
-    "tiny-lr": "^0.1.5",
+    "tiny-lr-fork": "0.0.5",
     "underscore": "~1.7.0",
     "unzip": "0.1.9",
     "vinyl-fs": "0.3.7",
