--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "ionic",
-  "version": "1.3.15-beta.3",
+  "version": "1.3.14-beta.3",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
   "bin": {
     "ionic": "bin/ionic"
+  },
+  "scripts": {
+    "bump": "node lib/tasks/bumpversion",
+    "beta-bump": "node lib/tasks/bumpversion --level pre --identifier beta",
+    "publish-release": "node lib/tasks/bumpversion --npmPublish",
+    "publish-tag": "node lib/tasks/bumpversion --level beta --npmPublishTag",
+    "git-release": "node lib/tasks/bumpversion --npmInstall --git --npmPublish"
   },
   "keywords": [
     "ionic",
