--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.3.14-beta.3",
+  "version": "1.3.15",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -12,7 +12,7 @@
     "beta-bump": "node lib/tasks/bumpversion --level pre --identifier beta",
     "publish-release": "node lib/tasks/bumpversion --npmPublish",
     "publish-tag": "node lib/tasks/bumpversion --level beta --npmPublishTag",
-    "git-release": "node lib/tasks/bumpversion --npmInstall --git --npmPublish"
+    "full-release": "node lib/tasks/bumpversion --npmInstall --git --npmPublish"
   },
   "keywords": [
     "ionic",
