--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.3.17",
+  "version": "1.3.18-beta.0",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -53,6 +53,7 @@
   "dependencies": {
     "archiver": "0.5.1",
     "async": "^0.9.0",
+    "cli-table": "^0.3.1",
     "colors": "0.6.2",
     "connect": "3.1.1",
     "connect-livereload": "0.5.2",
