--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "archiver": "0.5.1",
     "async": "^0.9.0",
+    "cheerio": "^0.19.0",
     "cli-table": "^0.3.1",
     "colors": "0.6.2",
     "connect": "3.1.1",
