--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.4.0-beta.7",
+  "version": "1.4.0-beta.10",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -67,11 +67,11 @@
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
-    "ionic-app-lib": "0.0.7",
+    "ionic-app-lib": "0.0.11",
     "ncp": "0.4.2",
     "npm": "2.1.3",
     "opbeat-ionic": "^1.1.3",
-    "open": "https://registry.npmjs.org/open/-/open-0.0.5.tgz",
+    "open": "0.0.5",
     "optimist": "0.6.0",
     "progress": "1.1.7",
     "prompt": "0.2.12",
