--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.5.1-beta.0",
+  "version": "1.5.1-beta.3",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -54,7 +54,6 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "archiver": "0.5.1",
     "async": "^0.9.0",
     "cheerio": "^0.19.0",
     "cli-table": "^0.3.1",
@@ -67,7 +66,7 @@
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
-    "ionic-app-lib": "0.1.1-beta.1",
+    "ionic-app-lib": "0.2.0",
     "ncp": "0.4.2",
     "npm": "2.1.3",
     "opbeat-ionic": "^1.1.3",
