--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "xml2js": "0.4.4"
   },
   "devDependencies": {
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^1.14.5",
+    "rewire": "^2.3.4"
   }
 }
