--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "form-data": "0.1.4",
     "gulp": "3.8.8",
     "ionic-app-lib": "0.3.9-beta.2",
+    "moment": "^2.10.6",
     "ncp": "0.4.2",
     "npm": "2.1.3",
     "opbeat-ionic": "^1.1.3",
