--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.6.4",
+  "version": "1.6.5-testing.0",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -66,7 +66,7 @@
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
-    "ionic-app-lib": "0.3.8",
+    "ionic-app-lib": "0.3.9-testing.0",
     "ncp": "0.4.2",
     "npm": "2.1.3",
     "opbeat-ionic": "^1.1.3",
