--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.7.0-beta.6",
+  "version": "1.7.0",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -67,7 +67,7 @@
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
-    "ionic-app-lib": "0.5.1-beta.0",
+    "ionic-app-lib": "0.5.1",
     "moment": "^2.10.6",
     "ncp": "0.4.2",
     "npm": "2.1.3",
