--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.7.10",
+  "version": "2.0.0",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -67,10 +67,10 @@
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
-    "ionic-app-lib": "0.6.5",
+    "inquirer": "^0.11.0",
+    "ionic-app-lib": "2.0.0",
     "moment": "^2.10.6",
     "ncp": "0.4.2",
-    "npm": "2.1.3",
     "open": "0.0.5",
     "optimist": "0.6.0",
     "progress": "1.1.7",
