--- a/package.json
+++ b/package.json
@@ -90,5 +90,39 @@
   "devDependencies": {
     "jasmine-node": "^1.14.5",
     "rewire": "^2.3.4"
-  }
+  },
+  "bundledDependencies": [
+    "async",
+    "cheerio",
+    "cli-table",
+    "colors",
+    "connect",
+    "connect-livereload",
+    "crc",
+    "cross-spawn",
+    "event-stream",
+    "expand-tilde",
+    "finalhandler",
+    "form-data",
+    "gulp",
+    "ionic-app-lib",
+    "moment",
+    "ncp",
+    "npm",
+    "open",
+    "optimist",
+    "progress",
+    "prompt",
+    "proxy-middleware",
+    "q",
+    "request",
+    "semver",
+    "serve-static",
+    "shelljs",
+    "tiny-lr-fork",
+    "underscore",
+    "unzip",
+    "vinyl-fs",
+    "xml2js"
+  ]
 }
