--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "0.9.2",
+    "chalk": "^1.1.1",
     "cheerio": "0.19.0",
     "cli-table": "0.3.1",
     "colors": "0.6.2",
@@ -71,12 +72,14 @@
     "finalhandler": "0.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
+    "gulp-util": "^3.0.7",
     "inquirer": "0.11.2",
     "ionic-app-lib": "2.0.0-beta.9",
     "moment": "2.11.1",
     "ncp": "0.4.2",
     "open": "0.0.5",
     "optimist": "0.6.0",
+    "pretty-hrtime": "^1.0.2",
     "progress": "1.1.7",
     "prompt": "0.2.12",
     "proxy-middleware": "0.7.0",
