--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "connect-livereload": "0.5.2",
     "crc": "3.2.1",
     "cross-spawn": "0.2.3",
+    "detective": "4.3.1",
     "event-stream": "3.0.20",
     "expand-tilde": "1.2.0",
     "finalhandler": "0.2.0",
