chore(): remove unused dependencies

--- a/package.json
+++ b/package.json
@@ -58,79 +58,55 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "chalk": "^1.1.1",
-    "cheerio": "0.19.0",
     "cli-table": "0.3.1",
     "colors": "0.6.2",
-    "connect": "3.1.1",
-    "connect-livereload": "0.5.2",
-    "crc": "3.2.1",
-    "cross-spawn": "0.2.3",
     "detective": "4.3.1",
-    "event-stream": "3.0.20",
     "expand-tilde": "1.2.0",
-    "finalhandler": "0.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
-    "gulp-util": "^3.0.7",
+    "gulp-util": "3.0.7",
     "inquirer": "0.11.2",
     "ionic-app-lib": "2.0.0-beta.13",
     "moment": "2.11.1",
-    "ncp": "0.4.2",
     "open": "0.0.5",
     "optimist": "0.6.0",
-    "pretty-hrtime": "^1.0.2",
+    "pretty-hrtime": "1.0.2",
     "progress": "1.1.7",
     "prompt": "0.2.12",
-    "proxy-middleware": "0.7.0",
     "q": "1.0.1",
     "request": "2.51.0",
     "semver": "4.3.6",
     "serve-static": "1.7.1",
     "shelljs": "0.2.6",
-    "tiny-lr-fork": "0.0.5",
     "underscore": "1.7.0",
-    "unzip": "0.1.9",
-    "vinyl-fs": "0.3.7",
-    "xml2js": "0.4.4"
+    "unzip": "0.1.9"
   },
   "devDependencies": {
     "jasmine-node": "1.14.5",
     "rewire": "2.5.1"
   },
   "bundledDependencies": [
-    "async",
-    "cheerio",
     "cli-table",
     "colors",
-    "connect",
-    "connect-livereload",
-    "crc",
-    "cross-spawn",
-    "event-stream",
+    "detective",
     "expand-tilde",
-    "finalhandler",
     "form-data",
     "gulp",
+    "gulp-util",
     "inquirer",
     "ionic-app-lib",
     "moment",
-    "ncp",
-    "npm",
     "open",
     "optimist",
+    "pretty-hrtime",
     "progress",
     "prompt",
-    "proxy-middleware",
     "q",
     "request",
     "semver",
     "serve-static",
     "shelljs",
-    "tiny-lr-fork",
     "underscore",
-    "unzip",
-    "vinyl-fs",
-    "xml2js"
+    "unzip"
   ]
 }
