feat(): remove postinstall script
There are no longer any dependencies in app-lib or the CLI that require
native bindings that need to potentially be rebuilt.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "full-release": "node lib/tasks/bumpversion --npmInstall --git --npmPublish",
     "test": "npm run jasmine",
     "e2e": "jasmine-node --captureExceptions ./e2e",
-    "jasmine": "jasmine-node --captureExceptions  ./spec",
-    "postinstall": "node lib/tasks/postinstall"
+    "jasmine": "jasmine-node --captureExceptions  ./spec"
   },
   "keywords": [
     "ionic",
