--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "xml2js": "0.4.4"
   },
   "devDependencies": {
+    "istanbul": "^0.4.3",
     "jasmine-node": "^1.14.5",
     "rewire": "^2.3.4"
   },
