--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "publish-tag": "node lib/tasks/bumpversion --level beta --npmPublishTag",
     "full-release": "node lib/tasks/bumpversion --npmInstall --git --npmPublish",
     "test": "npm run jasmine",
-    "cover": "istanbul cover node_modules/jasmine-node/bin/jasmine-node --captureExceptions spec/ && cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js && rm -rf coverage",
+    "coveralls": "istanbul cover node_modules/jasmine-node/bin/jasmine-node --captureExceptions spec/ && cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js && rm -rf coverage",
     "e2e": "jasmine-node --captureExceptions e2e/",
     "jasmine": "jasmine-node --captureExceptions  spec/"
   },
