--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "publish-tag": "node lib/tasks/bumpversion --level beta --npmPublishTag",
     "full-release": "node lib/tasks/bumpversion --npmInstall --git --npmPublish",
     "test": "npm run jasmine",
-    "e2e": "jasmine-node --captureExceptions ./e2e",
-    "jasmine": "jasmine-node --captureExceptions  ./spec"
+    "coveralls": "istanbul cover node_modules/jasmine-node/bin/jasmine-node --captureExceptions spec/ && cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js && rm -rf coverage",
+    "e2e": "jasmine-node --captureExceptions e2e/",
+    "jasmine": "jasmine-node --captureExceptions  spec/"
   },
   "keywords": [
     "ionic",
@@ -88,8 +89,10 @@
     "xml2js": "0.4.4"
   },
   "devDependencies": {
+    "istanbul": "^0.4.3",
     "jasmine-node": "^1.14.5",
-    "rewire": "^2.3.4"
+    "rewire": "^2.3.4",
+    "coveralls": "^2.2.0"
   },
   "bundledDependencies": [
     "async",
