chore(build): add eslint and remove jscs

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "unzip": "0.1.9"
   },
   "devDependencies": {
+    "eslint": "^2.8.0",
     "jasmine-node": "1.14.5",
     "rewire": "2.5.1"
   },
