feat(): replace gulp-util with fancy-log

--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "colors": "0.6.2",
     "detective": "4.3.1",
     "expand-tilde": "1.2.0",
+    "fancy-log": "1.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
-    "gulp-util": "3.0.7",
     "inquirer": "0.11.2",
     "ionic-app-lib": "2.0.0-beta.15",
     "moment": "2.11.1",
@@ -90,9 +90,9 @@
     "colors",
     "detective",
     "expand-tilde",
+    "fancy-log",
     "form-data",
     "gulp",
-    "gulp-util",
     "inquirer",
     "ionic-app-lib",
     "moment",
