chore(): add release script

--- a/package.json
+++ b/package.json
@@ -8,15 +8,11 @@
     "ionic": "bin/ionic"
   },
   "scripts": {
-    "bump": "node lib/tasks/bumpversion",
-    "beta-bump": "node lib/tasks/bumpversion --level pre --identifier beta",
-    "lint": "eslint .",
-    "publish-release": "node lib/tasks/bumpversion --npmPublish",
-    "publish-tag": "node lib/tasks/bumpversion --level beta --npmPublishTag",
-    "full-release": "node lib/tasks/bumpversion --npmInstall --git --npmPublish",
-    "test": "npm run jasmine",
+    "gh-release": "node scripts/release",
     "e2e": "jasmine-node --captureExceptions ./e2e",
-    "jasmine": "jasmine-node --captureExceptions  ./spec"
+    "jasmine": "jasmine-node --captureExceptions  ./spec",
+    "lint": "eslint .",
+    "test": "npm run jasmine"
   },
   "keywords": [
     "ionic",
@@ -86,7 +82,9 @@
     "unzip": "0.1.9"
   },
   "devDependencies": {
+    "conventional-changelog-cli": "1.1.1",
     "eslint": "^2.8.0",
+    "github": "0.2.4",
     "jasmine-node": "1.14.5",
     "rewire": "2.5.1"
   },
