chore(): update contributors

--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
     {
       "name": "Tim Lancina",
       "web": "https://twitter.com/timlancina"
+    },
+    {
+      "name": "Josh Thomas",
+      "web": "https://twitter.com/jthoms1"
     }
   ],
   "license": "MIT",
