--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "gh-release": "node scripts/release",
+	"coveralls": "istanbul cover node_modules/jasmine-node/bin/jasmine-node --captureExceptions spec/ && cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js && rm -rf coverage",
     "e2e": "jasmine-node --captureExceptions ./e2e",
     "jasmine": "jasmine-node --captureExceptions  ./spec",
     "lint": "eslint .",
@@ -84,11 +85,12 @@
   },
   "devDependencies": {
     "conventional-changelog-cli": "1.1.1",
+	"coveralls": "^2.2.0",
     "eslint": "^2.8.0",
     "github": "0.2.4",
+	"istanbul": "^0.4.3",
     "jasmine-node": "1.14.5",
-    "rewire": "2.5.1",
-    "sinon": "^1.17.4"
+    "rewire": "2.5.1"
   },
   "bundledDependencies": [
     "cli-table",
