--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "e2e": "jasmine-node --captureExceptions ./e2e",
     "jasmine": "jasmine-node --captureExceptions  ./spec",
     "lint": "eslint .",
-    "test": "npm run jasmine"
+    "test": "istanbul cover node_modules/jasmine-node/bin/jasmine-node --captureExceptions spec/"
   },
   "keywords": [
     "ionic",
