--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@ionic/app-generators": "0.0.3",
     "cli-table": "0.3.1",
     "colors": "0.6.2",
     "expand-tilde": "1.2.0",
