--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@ionic/app-generators": "0.0.3",
     "cli-table": "0.3.1",
     "colors": "0.6.2",
+    "cross-spawn-async": "2.1.9",
     "expand-tilde": "1.2.0",
     "form-data": "0.1.4",
     "gulp": "3.8.8",
@@ -96,6 +97,7 @@
   "bundledDependencies": [
     "cli-table",
     "colors",
+    "cross-spawn-async",
     "expand-tilde",
     "form-data",
     "gulp",
