--- a/circle.yml
+++ b/circle.yml
@@ -3,4 +3,4 @@ test:
     - nvm use 0.12 && npm test
     - nvm use 4.0 && npm test
   post:
-    - npm run coveralls
+    - nvm use 4.0 && npm run coveralls
