--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 test:
   override:
-    - nvm use 0.12 && npm test
+    - nvm use 0.12 && npm run jasmine
     - nvm use 4.0 && npm test
   post:
     - npm run coveralls
