--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -42,6 +42,7 @@
     "chalk": "^1.1.3",
     "cross-spawn": "^4.0.2",
     "minimist": "^1.2.0",
+    "os-name": "^2.0.1",
     "path-exists": "^3.0.0",
     "semver": "^5.3.0"
   },
