--- a/packages/cli-plugin-cloud/package.json
+++ b/packages/cli-plugin-cloud/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@ionic/cli-plugin-cloud",
-  "version": "3.0.0",
-  "description": "",
-  "homepage": "http://ionicframework.com/",
+  "version": "0.0.1",
+  "description": "Ionic Cloud Plugin for Ionic CLI",
+  "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
   "types": "./dist/main.d.ts",
   "scripts": {
@@ -14,9 +14,12 @@
   },
   "keywords": [
     "ionic",
+    "cloud",
     "ionic framework",
     "ionicframework",
+    "ionic cloud",
     "mobile",
+    "backend",
     "app",
     "hybrid",
     "cordova",
