--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,7 +11,8 @@
   "engines": {
     "node": ">=6"
   },
-  "types": "./dist/definitions.d.ts",
+  "main": "./dist/ionic.js",
+  "types": "./dist/ionic.d.ts",
   "scripts": {
     "build": "npm run clean && ../../node_modules/typescript/bin/tsc",
     "clean": "rm -rf ./dist",
