strict null checks

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "commonjs",
     "noImplicitAny": true,
     "outDir": "./dist",
+    "strictNullChecks": true,
     "target": "es5",
     "typeRoots": [
       "./node_modules/@types"
