--- a/packages/cli-plugin-cloud/tsconfig.json
+++ b/packages/cli-plugin-cloud/tsconfig.json
@@ -10,6 +10,7 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
+    "strictNullChecks": true,
     "target": "es5"
   },
   "include": [
