--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -69,7 +69,7 @@
     "gulp": "3.8.8",
     "gulp-util": "3.0.7",
     "inquirer": "0.11.2",
-    "ionic-app-lib": "2.1.0-beta.1",
+    "ionic-app-lib": "2.1.1",
     "moment": "2.11.1",
     "open": "0.0.5",
     "optimist": "0.6.0",
