--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "cross-spawn": "^4.0.2",
+    "inquirer": "^1.2.2",
     "minimist": "^1.2.0",
     "node-fetch": "^1.6.3",
     "os-name": "^2.0.1",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/chalk": "^0.4.30",
+    "@types/inquirer": "0.0.29",
     "@types/minimist": "^1.1.29",
     "@types/node": "^6.0.45",
     "@types/node-fetch": "0.0.4",
