--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,6 +52,7 @@
     "os-name": "^2.0.1",
     "path-exists": "^3.0.0",
     "semver": "^5.3.0",
+    "superagent": "^2.3.0",
     "tar": "^2.2.1"
   },
   "devDependencies": {
@@ -62,6 +63,7 @@
     "@types/node-fetch": "0.0.4",
     "@types/path-exists": "^1.0.29",
     "@types/semver": "^5.3.30",
+    "@types/superagent": "^2.0.35",
     "@types/tar": "^1.0.28"
   }
 }
