--- a/packages/cli-plugin-cloud/package.json
+++ b/packages/cli-plugin-cloud/package.json
@@ -36,10 +36,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "diff": "^3.0.1",
+    "ssh-config": "^1.0.0"
   },
   "devDependencies": {
     "@types/chalk": "^0.4.30",
+    "@types/diff": "0.0.31",
     "@types/node": "^6.0.45"
   },
   "peerDependencies": {
