--- a/packages/cli-plugin-cloud/package.json
+++ b/packages/cli-plugin-cloud/package.json
@@ -7,7 +7,8 @@
   "main": "./dist/index.js",
   "types": "./dist/main.d.ts",
   "scripts": {
-    "build": "npm run clean && ../../node_modules/.bin/tsc",
+    "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
+    "build": "npm run lint && npm run clean && ../../node_modules/.bin/tsc",
     "clean": "rm -rf ./dist",
     "prepublish": "npm run build",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
