--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "private": true,
   "scripts": {},
+  "dependencies": {},
   "devDependencies": {
     "concurrently": "^3.1.0",
     "conventional-changelog-cli": "1.1.1",
     "coveralls": "^2.2.0",
     "jest-cli": "^16.0.1",
+    "eslint-config-ionic": "0.0.2",
     "lerna": "2.0.0-beta.30",
     "rollup": "^0.36.1",
     "rollup-plugin-commonjs": "^5.0.4",
     "rollup-plugin-json": "^2.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
     "tslint": "^4.0.0-dev.0",
-    "tslint-eslint-rules": "^2.1.0",
-    "tslint-ionic-rules": "0.0.5",
+    "tslint-ionic-rules": "^0.0.8",
     "typescript": "^2.1.0-dev.20161005"
   },
   "jest": {
