--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -14,7 +14,8 @@
     ]
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "types/index.d.ts"
   ],
   "exclude": [
     "node_modules"
