--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,6 +47,7 @@
     "chalk": "^1.1.3",
     "cross-spawn": "^4.0.2",
     "inquirer": "^1.2.2",
+    "lodash-es": "^4.16.6",
     "minimist": "^1.2.0",
     "os-name": "^2.0.1",
     "path-exists": "^3.0.0",
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@types/chalk": "^0.4.30",
     "@types/inquirer": "0.0.29",
+    "@types/lodash": "^4.14.38",
     "@types/minimist": "^1.1.29",
     "@types/node": "^6.0.45",
     "@types/path-exists": "^1.0.29",
