--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -37,6 +37,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "chalk": "^1.1.3",
     "diff": "^3.0.1",
     "ssh-config": "^1.0.0"
   },
@@ -46,7 +47,6 @@
     "@types/node": "^6.0.45"
   },
   "peerDependencies": {
-    "@cli/ionic": "^3.0.0",
-    "chalk": "^1.1.3",
+    "@cli/ionic": "^3.0.0"
   }
 }
