--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,6 +48,8 @@
     "inquirer": "^1.2.2",
     "lodash-es": "^4.16.6",
     "minimist": "^1.2.0",
+    "node-fetch": "^1.6.3",
+    "open": "0.0.5",
     "os-name": "^2.0.1",
     "path-exists": "^3.0.0",
     "semver": "^5.3.0",
