--- a/packages/cli-plugin-cloud/tsconfig.json
+++ b/packages/cli-plugin-cloud/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowUnreachableCode": false,
-    "baseUrl": "../",
+    "baseUrl": "./",
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -13,7 +13,10 @@
     "target": "es6",
     "typeRoots": [
       "../cli/node_modules/@types"
-    ]
+    ],
+    "paths": {
+      "@ionic/cli": ["../cli"]
+    }
   },
   "include": [
     "src/**/*.ts",
