--- a/packages/cli-plugin-cordova/tsconfig.json
+++ b/packages/cli-plugin-cordova/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowUnreachableCode": false,
-    "baseUrl": "../",
+    "baseUrl": "./",
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -12,8 +12,11 @@
     "strictNullChecks": true,
     "target": "es6",
     "typeRoots": [
-      "../cli/node_modules/@types"
-    ]
+      "./cli/node_modules/@types"
+    ],
+    "paths": {
+      "@ionic/cli": ["../cli"]
+    }
   },
   "include": [
     "src/**/*.ts",
