--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,7 +12,7 @@
     "node": ">=6"
   },
   "main": "./dist/ionic.js",
-  "types": "./dist/ionic.d.ts",
+  "typings": "./dist/ionic.d.ts",
   "scripts": {
     "build": "npm run lint && npm run clean && ../../node_modules/.bin/concurrently -p '[{name}]' -n 'src,test' '../../node_modules/.bin/tsc' '../../node_modules/.bin/tsc -p test/tsconfig.json'",
     "clean": "rm -rf ./dist",
