feat(): added cli cordova plugin to project.

--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ionic/cli-plugin-cloud",
+  "name": "@ionic/cli-plugin-cordova",
   "version": "0.0.1",
-  "description": "Ionic Cloud Plugin for Ionic CLI",
+  "description": "Ionic Cordova Plugin for Ionic CLI",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
   "main": "./dist/index.js",
@@ -16,10 +16,10 @@
   },
   "keywords": [
     "ionic",
-    "cloud",
+    "cordova",
     "ionic framework",
     "ionicframework",
-    "ionic cloud",
+    "ionic cordova",
     "mobile",
     "backend",
     "app",
