--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "scripts": {},
   "dependencies": {},
   "devDependencies": {
+    "@types/chalk": "^0.4.30",
+    "@types/diff": "0.0.31",
+    "@types/inquirer": "0.0.31",
+    "@types/lodash": "^4.14.38",
+    "@types/minimist": "^1.1.29",
+    "@types/node": "^6.0.45",
+    "@types/node-fetch": "^1.6.6",
+    "@types/opn": "^3.0.28",
+    "@types/path-exists": "^1.0.29",
+    "@types/semver": "^5.3.30",
+    "@types/tar": "^1.0.28",
     "ava": "^0.16.0",
     "concurrently": "^3.1.0",
     "conventional-changelog-cli": "1.1.1",
