--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -37,16 +37,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chalk": "^1.1.3",
-    "diff": "^3.0.1",
-    "ssh-config": "^1.0.0"
-  },
-  "devDependencies": {
-    "@types/chalk": "^0.4.30",
-    "@types/diff": "0.0.31",
-    "@types/node": "^6.0.45"
   },
   "peerDependencies": {
-    "@cli/ionic": "^3.0.0"
+    "@cli/ionic": "^3.0.0",
+    "chalk": "^1.1.3"
   }
 }
