--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,21 +49,11 @@
     "lodash-es": "^4.16.6",
     "minimist": "^1.2.0",
     "node-fetch": "^1.6.3",
-    "open": "0.0.5",
+    "opn": "^4.0.2",
     "os-name": "^2.0.1",
     "path-exists": "^3.0.0",
     "semver": "^5.3.0",
     "superagent": "^2.3.0",
     "tar": "^2.2.1"
-  },
-  "devDependencies": {
-    "@types/chalk": "^0.4.30",
-    "@types/inquirer": "0.0.31",
-    "@types/lodash": "^4.14.38",
-    "@types/minimist": "^1.1.29",
-    "@types/node": "^6.0.45",
-    "@types/path-exists": "^1.0.29",
-    "@types/semver": "^5.3.30",
-    "@types/tar": "^1.0.28"
   }
 }
