--- a/packages/cli-plugin-cloud/package.json
+++ b/packages/cli-plugin-cloud/package.json
@@ -35,12 +35,10 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "diff": "^3.0.1",
-    "ssh-config": "^1.0.0"
-  },
-  "peerDependencies": {
-    "@ionic/cli": "^3.0.0",
-    "chalk": "^1.1.3"
+    "ssh-config": "^1.0.0",
+    "chalk": "^1.1.3",
+    "@ionic/cli": "^3.0.0"
   }
 }
