chore(): added jest and updated tests.

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -9,6 +9,10 @@
     "outDir": "./dist",
     "strictNullChecks": true,
     "target": "es6",
+    "lib": [
+      "es2017.object",
+      "es6"
+    ],
     "typeRoots": [
       "./node_modules/@types"
     ]
