--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "private": true,
   "scripts": {},
-  "dependencies": {},
   "devDependencies": {
     "@types/chalk": "^0.4.30",
     "@types/diff": "0.0.31",
     "@types/inquirer": "0.0.31",
+    "@types/jest": "^16.0.1",
     "@types/lodash": "^4.14.38",
     "@types/minimist": "^1.1.29",
     "@types/node": "^6.0.45",
@@ -14,11 +14,11 @@
     "@types/path-exists": "^1.0.29",
     "@types/semver": "^5.3.30",
     "@types/tar": "^1.0.28",
-    "ava": "^0.16.0",
     "concurrently": "^3.1.0",
     "conventional-changelog-cli": "1.1.1",
     "coveralls": "^2.2.0",
     "eslint-config-ionic": "0.0.2",
+    "jest-cli": "^17.0.3",
     "lerna": "2.0.0-beta.30",
     "rollup": "^0.36.1",
     "rollup-plugin-commonjs": "^5.0.4",
