--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "e2e": "jasmine-node --captureExceptions ./e2e",
     "jasmine": "jasmine-node --captureExceptions  ./spec",
     "lint": "eslint .",
-    "test": "istanbul cover node_modules/jasmine-node/bin/jasmine-node --captureExceptions spec/"
+    "test": "istanbul cover node_modules/jasmine-node/bin/jasmine-node --captureExceptions spec/",
+    "publish:nightly": "node ./scripts/publish-nightly.js"
   },
   "keywords": [
     "ionic",
