--- a/packages/cli-plugin-cloud/package.json
+++ b/packages/cli-plugin-cloud/package.json
@@ -40,7 +40,7 @@
     "diff": "^3.0.1",
     "ssh-config": "^1.0.0",
     "chalk": "^1.1.3",
-    "@ionic/cli": "^3.0.0"
+    "@ionic/cli-utils": "^0.0.1"
   },
   "jest": {
     "moduleFileExtensions": ["ts", "js"],
