--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@ionic/cli-plugin-cordova",
+  "name": "@ionic/cli-utils",
   "version": "0.0.1",
-  "description": "Ionic Cordova Plugin for Ionic CLI",
+  "description": "Ionic CLI Utils",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
   "main": "./dist/index.js",
-  "types": "./dist/main.d.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
     "build": "npm run lint && npm run clean && ../../node_modules/.bin/tsc",
@@ -37,7 +37,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@ionic/cli-utils": "^0.0.1",
     "chalk": "^1.1.3"
   },
   "jest": {
