--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,13 +14,13 @@
   "main": "./dist/ionic.js",
   "typings": "./dist/ionic.d.ts",
   "scripts": {
-    "build": "npm run lint && npm run clean && ../../node_modules/.bin/concurrently -p '[{name}]' -n 'src,test' '../../node_modules/.bin/tsc' '../../node_modules/.bin/tsc -p test/tsconfig.json'",
+    "build": "npm run lint && npm run clean && ../../node_modules/.bin/concurrently -p '[{name}]' -n 'src' '../../node_modules/.bin/tsc'",
     "clean": "rm -rf ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
     "test": "../../node_modules/.bin/jest",
     "globallink": "npm link",
-    "watch": "npm run clean && ../../node_modules/.bin/concurrently -p '[{name}]' -n 'src,test' '../../node_modules/.bin/tsc --watch' '../../node_modules/.bin/tsc -p test/tsconfig.json --watch'"
+    "watch": "npm run clean && ../../node_modules/.bin/concurrently -p '[{name}]' -n 'src,test' '../../node_modules/.bin/tsc --watch'"
   },
   "keywords": [
     "ionic",
@@ -42,6 +42,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@ionic/cli-utils": "^0.0.1",
     "chalk": "^1.1.3",
     "cross-spawn": "^4.0.2",
     "inquirer": "^1.2.2",
