fix(): all plugins should load without a dependency on using namespaces

--- a/packages/cli-core/package.json
+++ b/packages/cli-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ionic/cli-core",
+  "name": "@ionic/cli-plugin-core",
   "version": "0.0.1",
   "description": "Ionic CLI Core",
   "homepage": "https://ionic.io/",
